--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
 
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha6'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
